tests/ui/mut_return.stderr
error: &mut return type is not allowed unless there is a &mut argument
 --> $DIR/mut_return.rs:6:9
  |
6 |         fn f(t: &Thing) -> Pin<&mut CxxString>;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: &mut return type is not allowed unless there is a &mut argument
 --> $DIR/mut_return.rs:7:16
  |
7 |         unsafe fn g(t: &Thing) -> Pin<&mut CxxString>;
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
